# Hasher

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  defender-smoke-test.yml  release.yml  security-audit.yml
assets/: hasher-icon.icns
docs/: github-release-security.md
packaging/macos/: Info.plist  build.sh
packaging/windows/: Hasher.iss  build.ps1
scripts/: generate-release-notes.sh  generate-sha256s.sh
src/: lib.rs  main.rs
