[package]
name = "hasher"
version = "0.4.0"
edition = "2024"
description = "A friendly desktop and command-line hashing calculator"
license = "AGPL-3.0-only"

[lib]
name = "hasher"
path = "src/lib.rs"

[[bin]]
name = "hasher"
path = "src/main.rs"

[[bin]]
name = "hasher-cli"
path = "src/bin/hasher-cli.rs"

[dependencies]
adler2 = "2.0"
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
eframe = { version = "0.35", default-features = false, features = [
    "default_fonts",
    "persistence",
    "wgpu_no_default_features",
] }
ewf = "0.4.0"
hex = "0.4"
md-5 = "0.11"
rfd = { version = "0.17", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.11"
sha2 = "0.11"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
